Implementation of a simple tcp-based LLM-server.